<resources>
    <string name="app_name" translatable="false">AgendaBIG</string>
    <string name="txtBjscar" translatable="false">Buscar</string>
    <string name="btnAgregar" translatable="false">Agregar</string>
    <string name="lblTitulo" translatable="false">Titulo</string>
    <string name="lblDescripcion" translatable="false">Descripción</string>
    <string name="rdTarea" translatable="false">Tarea</string>
    <string name="rdNota" translatable="false">Nota</string>
    <string name="btnFechaAlarma" translatable="false">Seleccionar Fecha y Hora</string>
    <string name="lblArchivos" translatable="false">Archivos</string>
    <string name="btnArchivos" translatable="false">Añadir Archivos</string>
    <string name="btnGuardar" translatable="false">Guardar</string>
    <string name="itmAgregar" translatable="false">Agregar</string>
    <string name="itmAcercaDe" translatable="false">Nosotros</string>
    <string name="itmModificar" translatable="false">Modificar1</string>
    <string name="itmEliminar" translatable="false">Eliminar1</string>
    <string name="btnReproducir" translatable="false">Reproducir</string>
    <string name="btnPausar" translatable="false">Pausa</string>

    <string name="terminacion" translatable="false">Finalizar</string>
    <string name="agregarRecordatorio" translatable="false">Nuevo Recordatorio</string>
    <string name="verRecordatorios" translatable="false">Recordatorios</string>
    <string name="audio" translatable="false">Grabar audio</string>
    <string name="video" translatable="false">Grabar video</string>
    <string name="foto" translatable="false">Fotografia</string>
    <string name="archivo" translatable="false">Buscar archivo</string>

    <string name="eliminar" translatable="false">Eliminar</string>
    <string name="modificar" translatable="false">Actualizar</string>
    <string name="ver" translatable="false">Ver</string>
    <string name="marcar" translatable="false">Marcar como terminado</string>
    <string name="marcar2" translatable="false">Cancelar completacion</string>
    <string name="agregar_multimedia" translatable="false">Agregar Multimedia</string>
    <string name="termina_en" translatable="false">Termina en:</string>

</resources>
